// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.GoogleMap className 1`] = `
<div
  className="uu5-bricks-google-map my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap controlled 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap controlled 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap controlled 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap controlled 4`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap default props 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableDefaultUI 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableDefaultUI 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableDefaultUI 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableDefaultUI 4`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableZoom 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableZoom 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableZoom 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disableZoom 4`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disabled 1`] = `
<div
  className="uu5-bricks-google-map uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disabled 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disabled 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap disabled 4`] = `
<div
  className="uu5-bricks-google-map uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap docKit example render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID5"
  style={Object {}}
  title={null}
>
  <GoogleMap
    className={null}
    controlled={true}
    disableDefaultUI={false}
    disableZoom={false}
    disabled={false}
    draggable={true}
    googleApiKey="AIzaSyBkv-K9tpS-MrvvRKOpIGEj7H5wwdHD9pA"
    height="400px"
    hidden={false}
    id="uuID4"
    key="uuID4"
    latitude={50.0755381}
    longitude={14.43780049999998}
    mainAttrs={null}
    mapStyle={null}
    mapType="roadmap"
    markers={
      Array [
        Object {
          "animation": "drop",
          "latitude": 50.0754616,
          "longitude": 14.43686409999998,
        },
      ]
    }
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    width="100%"
    zoom={14}
  />
  <GoogleMap
    className={null}
    controlled={true}
    disableDefaultUI={true}
    disableZoom={false}
    disabled={false}
    draggable={true}
    googleApiKey="AIzaSyBkv-K9tpS-MrvvRKOpIGEj7H5wwdHD9pA"
    height="400px"
    hidden={false}
    id="uuID3"
    key="uuID3"
    latitude={50.107799}
    longitude={14.453689}
    mainAttrs={null}
    mapStyle={null}
    mapType="roadmap"
    markers={Array []}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    width="100%"
    zoom={5}
  />
  <GoogleMap
    className={null}
    controlled={true}
    disableDefaultUI={false}
    disableZoom={false}
    disabled={false}
    draggable={true}
    googleApiKey="AIzaSyBkv-K9tpS-MrvvRKOpIGEj7H5wwdHD9pA"
    height="300px"
    hidden={false}
    id="uuID2"
    key="uuID2"
    latitude={50.107799}
    longitude={14.453689}
    mainAttrs={null}
    mapStyle={null}
    mapType="satellite"
    markers={Array []}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    width="50%"
    zoom={14}
  />
  <GoogleMap
    className={null}
    controlled={true}
    disableDefaultUI={true}
    disableZoom={false}
    disabled={false}
    draggable={true}
    googleApiKey="AIzaSyBkv-K9tpS-MrvvRKOpIGEj7H5wwdHD9pA"
    height="400px"
    hidden={false}
    id="uuID1"
    key="uuID1"
    latitude={50.107799}
    longitude={14.453689}
    mainAttrs={null}
    mapStyle={
      Array [
        Object {
          "elementType": "geometry",
          "stylers": Array [
            Object {
              "color": "#1d2c4d",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "stylers": Array [
            Object {
              "color": "#8ec3b9",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "stylers": Array [
            Object {
              "color": "#1a3646",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative.country",
          "stylers": Array [
            Object {
              "color": "#4b6878",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#64779e",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative.province",
          "stylers": Array [
            Object {
              "color": "#4b6878",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "landscape.man_made",
          "stylers": Array [
            Object {
              "color": "#334e87",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape.natural",
          "stylers": Array [
            Object {
              "color": "#023e58",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#283d6a",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#6f9ba5",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#1d2c4d",
            },
          ],
        },
        Object {
          "featureType": "poi.business",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#023e58",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#3C7680",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#304a7d",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#98a5be",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#1d2c4d",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "road.arterial",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#2c6675",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#255763",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#b0d5ce",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#023e58",
            },
          ],
        },
        Object {
          "featureType": "road.local",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "transit",
          "stylers": Array [
            Object {
              "color": "#98a5be",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "transit",
          "stylers": Array [
            Object {
              "color": "#1d2c4d",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#283d6a",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.station",
          "stylers": Array [
            Object {
              "color": "#3a4762",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#0e1626",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#4e6d70",
            },
          ],
        },
      ]
    }
    mapType="roadmap"
    markers={Array []}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    width="100%"
    zoom={11}
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap draggable 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap draggable 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap draggable 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap draggable 4`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap googleApiKey 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap height 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "300px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap hidden 1`] = `
<div
  className="uu5-bricks-google-map uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap hidden 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap hidden 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap hidden 4`] = `
<div
  className="uu5-bricks-google-map uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap id 1`] = `
<div
  className="uu5-bricks-google-map"
  id="myId"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap latitude 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap longitude 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mainAttrs 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mapStyle 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mapType 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mapType 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mapType 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap mapType 4`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap markers 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap name 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 4`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 5`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 6`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 7`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 8`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 9`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 10`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 11`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 12`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 13`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 14`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 15`] = `""`;

exports[`UU5.Bricks.GoogleMap nestingLevel 16`] = `""`;

exports[`UU5.Bricks.GoogleMap nestingLevel 17`] = `""`;

exports[`UU5.Bricks.GoogleMap nestingLevel 18`] = `""`;

exports[`UU5.Bricks.GoogleMap nestingLevel 19`] = `
<span>
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    level={null}
    mainAttrs={null}
    mountContent="onFirstRender"
    name={null}
    nestingLevel={null}
    noIndex={false}
    offsetTop={null}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  >
    <div
      className="uu5-bricks-google-map"
      id="uuID"
      style={Object {}}
      title={null}
    >
      <div
        style={
          Object {
            "height": "400px",
            "width": "100%",
          }
        }
      />
    </div>
  </Modal>
  <Link
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.GoogleMap nestingLevel 20`] = `
<span>
  <Modal
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    forceRender={false}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    level={null}
    mainAttrs={null}
    mountContent="onFirstRender"
    name={null}
    nestingLevel={null}
    noIndex={false}
    offsetTop={null}
    onClose={null}
    overflow={false}
    pureRender={false}
    ref_={[Function]}
    scrollableBackground={false}
    selected={false}
    shown={false}
    size="m"
    sticky={false}
    stickyBackground={false}
    style={null}
    tooltip={null}
    underline={false}
  >
    <div
      className="uu5-bricks-google-map"
      id="uuID"
      style={Object {}}
      title={null}
    >
      <div
        style={
          Object {
            "height": "400px",
            "width": "100%",
          }
        }
      />
    </div>
  </Modal>
  <Link
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</span>
`;

exports[`UU5.Bricks.GoogleMap noIndex 1`] = `
<div
  className="uu5-bricks-google-map uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap noIndex 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap noIndex 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap noIndex 4`] = `
<div
  className="uu5-bricks-google-map uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap pureRender 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap pureRender 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap pureRender 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap pureRender 4`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap selected 1`] = `
<div
  className="uu5-bricks-google-map uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap selected 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap selected 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap selected 4`] = `
<div
  className="uu5-bricks-google-map uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap style 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap style 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap style 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap style 4`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap tooltip 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap width 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "80%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 1`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 2`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 3`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 4`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 5`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 6`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 7`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 8`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 9`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`UU5.Bricks.GoogleMap zoom 10`] = `
<div
  className="uu5-bricks-google-map"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  />
</div>
`;
